# liars-bar-agent

./: .gitignore  README.md  docker-compose.yml  railway.json
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: config.py
backend/app/api/: auth.py  lobby.py  tts.py
backend/app/auth/: secondme.py
backend/app/database/: __init__.py
backend/app/game_logic/: __init__.py  base.py  bot_ai.py  deck_engine.py  dice_engine.py  roulette.py
backend/app/game_manager/: __init__.py  room.py
backend/app/models/: __init__.py  events.py  game.py  room.py  user.py
backend/app/ws/: game_ws.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: http.ts  ws.ts
frontend/src/audio/: sounds.ts
frontend/src/components/: AnimalAvatar.tsx
frontend/src/pages/: GamePage.tsx  LobbyPage.tsx  LoginPage.tsx
frontend/src/stores/: auth.ts  game.ts  lobby.ts  table.ts
frontend/src/types/: models.ts
